--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ ipykernel="6.7.0"
 statsmodels="0.13.1"
 seaborn="0.11.2"
 scipy="1.8.0"
+pyclustering="0.10.1.2"
 
 
 [tool.poetry.dev-dependencies]
